...
      nativeName: 'Français',
      code: 'fr_FR',
      locale: Locale('fr', 'FR'),
      flagAsset: 'assets/icons/flags/flag_fr.svg',
    ),
    AppLanguage(
      name: 'Deutsch (DE)',
      nativeName: 'Deutsch',
      code: 'de_DE',
      locale: Locale('de', 'DE'),
      flagAsset: 'assets/icons/flags/flag_de.svg',
    ),
  ];
...
