...
    side = json["side"];
    sideIngr = json["side_ingr"];
    salad1 = json["salad1"];
    salad2 = json["salad2"];
    dessert = json["dessert"];
    observ = json["observ"];
    open = json["open"];
    createdAt = (json["created_at"] ?? DateTime.now());
  }

  Map<String, dynamic> toJson() {
    Map<String, dynamic> refeicao = {
      "date": date.toString(),
...
